# HelioTrace

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MEMORY.md  README.md  THIRD_PARTY_LICENSES.md  app.py  docker-compose.yml  pyproject.toml
.claude/: instructions.md  settings.local.json
.claude/agents/: physics-reviewer.md  test-coverage-auditor.md
.claude/skills/gen-test/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: test.yml
.streamlit/: config.toml
docs/: .gitkeep
pages/: 01_CME_Propagation.py  01_GCS_Observations.py  01_Propagation_Simulator.py  02_ICME_Propagation.py  home.py
src/heliotrace/: __init__.py  config.py  i18n.py
src/heliotrace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/heliotrace/locale/: __init__.py  de.py  en.py
src/heliotrace/models/: __init__.py  schemas.py
src/heliotrace/physics/: __init__.py  apex_ratio.py  drag.py  fitting.py  geometry.py
src/heliotrace/simulation/: __init__.py  runner.py
src/heliotrace/ui/: __init__.py  state.py  utils.py
src/heliotrace/ui/components/: __init__.py  gcs_plot.py  ht_plot.py  propagation_plot.py  sidebar_inputs.py  target_selector.py
tests/: __init__.py  test_i18n.py  test_smoke.py
tests/physics/: __init__.py  test_apex_ratio.py  test_drag.py  test_fitting.py  test_geometry.py
tests/simulation/: __init__.py  test_runner.py
tests/ui/components/: test_gcs_plot.py  test_sidebar_inputs.py
