[project]
name = "heliotrace"
version = "0.1.0"
description = "Interactive CME propagation modelling — DBM & MODBM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit~=1.41",
    "astropy~=7.0",
    "plotly~=5.24",
    "numpy~=2.1.3",
    "pandas~=2.2.3",
    "scipy~=1.15",
]

[project.optional-dependencies]
# Install with: pip install heliotrace[notebooks]
notebooks = [
    "sunpy~=5.1",
    "matplotlib~=3.10",
]
# Install with: pip install heliotrace[dev]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v"

[tool.ruff]
  target-version = "py311"
  line-length = 100
  exclude = [".venv", ".git", "__pycache__"]

  [tool.ruff.lint]
  select = ["E", "F", "W", "I"]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
