[project]
name = "heliotrace"
version = "0.1.0"
description = "Interactive CME propagation modelling — DBM & MoDBM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit~=1.41",
    "astropy~=7.0",
    "plotly~=5.24",
    "numpy~=2.1.3",
    "pandas~=2.2.3",
    "scipy~=1.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "pyright",
]
notebooks = [
    "sunpy~=5.1",
    "matplotlib~=3.10",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "pyright",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v"

[tool.ruff]
  target-version = "py311"
  line-length = 100
  exclude = [".venv", ".git", "__pycache__"]

  [tool.ruff.lint]
  select =[
    "E", "F", "W",  # Standard Flake8
    "I",            # isort
    "B",            # flake8-bugbear
    "UP",           # pyupgrade: modern Python 3.11+ syntax
    "SIM",          # flake8-simplify: cleaner code logic
    "NPY",          # NumPy-specific rules: for Astropy/SciPy workflows
    "PT",           # flake8-pytest-style: keeps tests clean
  ]
  ignore = ["E501"] 

  [tool.ruff.lint.isort]
  known-first-party = ["heliotrace"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportAttributeAccessIssue = "warning" # CI shouldn't fail on sol.t or array.to()
reportArgumentType = "warning"         # Demote Plotly row=1 and float/Quantity mismatches
reportMissingImports = "error"         # Ensures dependencies are correct
