[project]
name = "heliotrace"
version = "0.3.1"
description = "Interactive CME propagation modelling — DBM & MoDBM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1,<3",
    "scipy>=1.15,<2",
    "astropy>=7.0,<8",
    "pandas>=2.2,<3",
    "plotly>=5.24,<6",
    "streamlit>=1.41,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v"

[tool.ruff]
  target-version = "py312"
  line-length = 100
  exclude = [".venv", ".git", "__pycache__"]

  [tool.ruff.lint]
  select =[
    "E", "F", "W",  # Standard Flake8
    "I",            # isort
    "B",            # flake8-bugbear
    "UP",           # pyupgrade: modern Python 3.12+ syntax
    "SIM",          # flake8-simplify: cleaner code logic
    "NPY",          # NumPy-specific rules: for Astropy/SciPy workflows
    "PT",           # flake8-pytest-style: keeps tests clean
  ]
  ignore = ["E501"] 

  [tool.ruff.lint.isort]
  known-first-party = ["heliotrace"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportAttributeAccessIssue = "warning" # CI shouldn't fail on sol.t or array.to()
reportArgumentType = "warning"         # Demote Plotly row=1 and float/Quantity mismatches
reportMissingImports = "error"         # Ensures dependencies are correct
